# dentex

./: .gitignore  AGENTS.md  Makefile  README.md  dentex-benchmark-heatmap.ipynb  dentex.ipynb  dentex.md  dentex_workflow.ipynb  final.ipynb  insights.md  presentation.md  pyproject.toml  quadrant.ipynb  regularisation.ipynb  requirements-colab.txt  requirements.txt  seg_and_det.ipynb
DentexSegAndDet/: predict.py  process_dataset.py  train_unet.py
core/: __init__.py  cli.py  config.py  console.py  experiments.py  paths.py
data/dentex/: README.md
final_results/download_bundle/: bundle_summary.txt  final_error_decomposition_validation.csv  predictions_challenge_format_validation.json  predictions_unified_test.json
final_results/predictions/: final_metrics_released_test_official_style.json  final_metrics_validation_official_style.json  final_per_class_diagnosis_ap50.csv  final_per_class_enumeration_ap50.csv  final_per_class_quadrant_ap50.csv  final_summary.json  predictions_challenge_format_test.json  predictions_unified_validation.json
models/: README.md
notebooks/: insights_plots.ipynb
pipelines/: __init__.py  annotate_released_test_labels.py  best_checkpoint_test_inference.py  dual_detector_baseline_ablation.py  dual_detector_regularisation_ablation.py  quadrant_detector_ablation.py  render_unified_prediction_overlays.py  task_specific_detector_fusion.py
quadrant_results/predictions/: best_model_c_error_decomposition.csv  best_model_c_per_class_quadrant_ap50.csv  best_model_c_predictions_validation.json  model_c_pipeline_comparison.csv  (+3 more)
results/: README.md
(+35 files in other folders)
